k8s/IT19206660/abc-customer-backend-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abc-customer-backend-app-service
spec:
  type: ClusterIP
  selector:
    app: abc-customer-backend-app
  ports:
    - port: 9090
      targetPort: 9090
