k8s/IT19206660/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: abc-frontend-app-service
                port:
                  number: 3000
          - path: /api/product/?(.*)
            pathType: Prefix
            backend:
              service:
                name: abc-product-backend-app-service
                port:
                  number: 9090
          - path: /api/order/?(.*)
            pathType: Prefix
            backend:
              service:
                name: abc-order-backend-app-service
                port:
                  number: 9090
          - path: /api/supplier/?(.*)
            pathType: Prefix
            backend:
              service:
                name: abc-supplier-backend-app-service
                port:
                  number: 9090
          - path: /api/customer/?(.*)
            pathType: Prefix
            backend:
              service:
                name: abc-customer-backend-app-service
                port:
                  number: 9090
